Get order by number instead of id
